On branch master

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <p>Student of NHCE currently pursuing BE(final year) in information science and engineering. A tech enthusiast who looking for a job opportunity to learn and explore new things and to gain experience in the IT industry. Has keen interests in technologies like cloud computing, web development, app development. A good team player.
             One of my hobbies are to dance, currently pursuing BA(2nd year) in Bharathnatyam. Languages known are C,Java,Python,C++,HTML,CSS,Java Script,PHP,SQL.
         </p>
-        <a href="C:\Users\LISHA\Desktop\portfolio\img\resume.pdf" class="cta">Download Resume</a>
+        <a href="C:\Users\LISHA\OneDrive\Desktop\portfolio\img\resume.pdf" class="cta">Download Resume</a>
       </div>
     </div>
   </section>
