--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="service-bottom">
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Artificial Intelligence: Search Methods for problem solving</h2>
+          <h2>Artificial Intelligence:Search Methods for problem solving</h2>
           <p>In this course i explored a variety of representation formalisms and the associated algorithms for reasoning. I started with a simple language of propositions and so on..</p>
         </div>
         <div class="service-item">
@@ -76,7 +76,7 @@
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Affective Computing</h2>
-          <p>This course will overview the emotion theory, computational modelling of emotions, analysis of emotions using different modalities (such as voice, facial expressions, physiological signals etc) and related machine learning and/or signal processing techniques.</p>
+          <p>This course overviews the emotion theory, computational modelling, analysis of emotions using different modalities and related machine learning and/or signal processing techniques. Also discusses ethical, legal and social implications of affective computing.</p>
         </div>
         <div class="service-item">
             <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
@@ -85,8 +85,28 @@
           </div>
           <div class="service-item">
             <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+            <h2>Google Cloud Computing Foundations</h2>
+            <p>This course provides an overview of concepts central to cloud basics, big data,and machine learning. This course provides an overview of cloud computing, ways to use Google Cloud.</p>
+          </div>
+          <div class="service-item">
+            <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+            <h2>Design & Implementation Of Human-Computer Interfaces</h2>
+            <p>Human-computer interfaces have become very much part of our lives.In this course, we shall learn the stages a system should follow to be usable.</p>
+          </div>
+          <div class="service-item">
+            <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
             <h2>Product Intern-certificate</h2>
             <p>I interned as a product intern for the NUDGE institute which is located in Marathalli, Bengaluru. It was an online internship for 30 days, where we had to test the product that was designed and had to give daily feedback.</p>
+          </div>
+          <div class="service-item">
+            <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+            <h2>Ethical Hacking</h2>
+            <p>Ethical hacking is a subject that has become very important in present-day context, and can help individuals and organizations to adopt safe practices and usage of their IT infrastructure. Starting from the basic topics like networking, network security and cryptography, the course will cover various attacks and vulnerabilities and ways to secure them.</p>
+          </div>
+          <div class="service-item">
+            <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+            <h2>Introduction To Industry 4.0 And Industrial Internet Of Things</h2>
+            <p>Industry 4.0 concerns the transformation of industrial processes through the integration of modern technologies such as sensors, communication, . IIoTis an application of IoT in industries to modify the various existing industrial systems.</p>
           </div>
       </div>
     </div>
